plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'yiu.aisl'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	//springboot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Lettuce
	implementation 'io.lettuce:lettuce-core'

	// 이메일 인증 관련
	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
	implementation 'jakarta.mail:jakarta.mail-api:1.6.5'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// template
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// firebase
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	// lombok
	testImplementation 'org.projectlombok:lombok:1.18.26'
	testImplementation 'org.projectlombok:lombok:1.18.26'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
